--- a/rca/static_src/sass/main.scss
+++ b/rca/static_src/sass/main.scss
@@ -64,6 +64,7 @@
 @import 'components/pathway-item';
 @import 'components/partnerships';
 @import 'components/profile-detail';
+@import 'components/profile-image';
 @import 'components/profile-teaser';
 @import 'components/programme-overview';
 @import 'components/proposition-statement';
@@ -81,6 +82,7 @@
 @import 'components/slide';
 @import 'components/slideshow';
 @import 'components/social-item';
+@import 'components/staff-body';
 @import 'components/staff-overview';
 @import 'components/step-item';
 @import 'components/stat-block';
