--- a/rca/static_src/sass/components/_student-listing.scss
+++ b/rca/static_src/sass/components/_student-listing.scss
@@ -7,6 +7,16 @@
 
     &__header {
         margin-bottom: ($gutter * 2);
+
+        @include media-query(large) {
+            grid-column: 2 / span 1;
+        }
+    }
+
+    &__heading {
+        @include media-query(large) {
+            max-width: 160px; // force line wrap
+        }
     }
 
     &__content {
@@ -20,7 +30,7 @@
         }
 
         @include media-query(large) {
-            grid-column: 2 / span 2;
+            grid-column: 3 / span 2;
         }
     }
 }
