Adding max height to profile image

--- a/rca/static_src/sass/components/_profile-image.scss
+++ b/rca/static_src/sass/components/_profile-image.scss
@@ -6,6 +6,9 @@
             display: block;
             width: 100%;
             height: auto;
+            max-height: 680px;
+            max-width: 680px;
+            margin-left: auto;
         }
     }
 }
