--- a/rca/project_styleguide/templates/patterns/atoms/profile-teaser/profile-teaser.html
+++ b/rca/project_styleguide/templates/patterns/atoms/profile-teaser/profile-teaser.html
@@ -1,15 +1,21 @@
-{% load wagtailcore_tags wagtailimages_tags %}
+{% load wagtailcore_tags wagtailimages_tags static %}
 
 <div class="profile-teaser">
     {% if item.link %}
         <a href="{{ item.link }}" class="profile-teaser__container">
     {% endif %}
+    {% if item.image %}
         {% image item.image fill-60x60 as profile_image %}
         <img src="{{ profile_image.url }}" width="{{ width }}" height="{{ height }}" alt="{{ profile_image.alt }}" class="profile-teaser__image">
+    {% else %}
+        <img src="{% static "images/author_placeholder.png" %}" alt="" class="profile-teaser__image profile-teaser__image--placeholder">
+    {% endif %}
+    {% if item.first_name or item.surname or item.meta %}
         <div class="profile-teaser__content">
             <h3 class="profile-teaser__heading body body--one"><span class="profile-teaser__first-name">{{ item.first_name }}</span> <span class="profile-teaser__surname">{{ item.surname }}</span></h3>
             <p class="profile-teaser__meta body body--two">{{ item.meta }}</p>
         </div>
+    {% endif %}
     {% if item.link %}
         </a>
     {% endif %}
