Setting up research centre template

--- a/rca/project_styleguide/templates/patterns/organisms/image-video-block/image-video-block.html
+++ b/rca/project_styleguide/templates/patterns/organisms/image-video-block/image-video-block.html
@@ -9,7 +9,7 @@
     {% if not out_of_grid %}
         <div class="section__row grid">
     {% endif %}
-        {% include "patterns/molecules/image-caption-link/image-caption-link.html" with modal=modal %}
+        {% include "patterns/molecules/image-caption-link/image-caption-link.html" with caption=caption modal=modal %}
     {% if not out_of_grid %}
         </div>
     {% endif %}
